objects/ASI_CRM_Calculated_Payment_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Actual_Volume__c</fullName>
        <label>Actual Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Brought_Forward__c</fullName>
        <label>Brought Forward</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Calculated_Payment__c</fullName>
        <label>Calculated Payment</label>
        <referenceTo>ASI_CRM_Calculated_Payment__c</referenceTo>
        <relationshipLabel>Calculated Payment Items</relationshipLabel>
        <relationshipName>Calculated_FOC_Payment_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ASI_CRM_Carried_Forward__c</fullName>
        <label>Carried Forward</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cash__c</fullName>
        <label>Cash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ExcessQuantity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exceeded Contract Entitlement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Original_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Calculated Payment Items (Original SKU)</relationshipLabel>
        <relationshipName>Calculated_Payment_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipName>Calculated_FOC_Payment_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SetupCode__c</fullName>
        <label>Setup Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Volume__c</fullName>
        <label>Target Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Calculated Payment Item</label>
    <nameField>
        <displayFormat>FPI{00000000}</displayFormat>
        <label>Calculated Payment Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculated Payment Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_Calculated_Payment_Item_Type</fullName>
        <active>true</active>
        <label>MY Calculated Payment Item Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>